--- a/public/index.html
+++ b/public/index.html
@@ -1,25 +1,25 @@
-<!<!DOCTYPE html>
-<<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Websocket Test</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script>
-    <link href="/styles.css" rel="stylesheet" />
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>Test Sockets</title>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.7.3/socket.io.js"></script>
+        <link href="/styles.css" rel="stylesheet" />
+    </head>
+    <body>
 
-  </head>
-  <body>
-    <div id="mario-chat">
-      <div id="chat-window">
-        <div id="output"></div><!--output-->
-        <div id="feedback"></div><!--feedback-->
-      </div><!--chat-window-->
+        <div id="mario-chat">
+            <h2>Test Chat</h2>
+            <div id="chat-window">
+                <div id="output"></div>
+                <div id="feedback"></div>
+            </div>
+            <input id="handle" type="text" placeholder="Handle" />
+            <input id="message" type="text" placeholder="Message" />
+            <button id="send">Send</button>
+        </div>
 
-      <input id="handle" type="text" placeholder="Handle" />
-      <input id="message" type="text" placeholder="Message" />
-      <button id="send">Send</button>
 
-    </div><!--mario-chat-->
+    </body>
     <script src="/chat.js"></script>
-  </body>
 </html>
